--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,7 +1,13 @@
-name: go workflow test
+name: go workflows test
 
 on: [push]
 
 jobs:
   go:
     uses: jreisinger/github-actions/.github/workflows/go.yml@main
+  go-release:
+    needs:
+      - go
+    uses: jreisinger/github-actions/.github/workflows/go-releaser.yml@main
+    secrets:
+      PUBLIC_REPO_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
