--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -2,6 +2,12 @@ name: go-release
 
 on:
   workflow_call:
+    inputs:
+      main:
+        description: "main.go location"
+        default: "."
+        required: false
+        type: string
 
 jobs:
   release:
@@ -20,5 +26,6 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release --rm-dist
+          main: ${{ inputs.main }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
