--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -10,12 +10,12 @@ jobs:
     steps:
       -
         name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       -
-        name: go releaser
-        uses: goreleaser/goreleaser-action@v3
+        name: run go releaser
+        uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
           version: latest
