--- a/.github/workflows/go-test-scan.yml
+++ b/.github/workflows/go-test-scan.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           go-version:  ${{ inputs.go-version }}
       -
+        name: go mod tidy
+        run: go mod tidy
+      -
         name: go test
         run: go test -v ./...
       -
